compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__assigning.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 52
expression: "\nfn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
---
----- SOURCE CODE

fn go(x, y) {
  let assert True = x
  let assert False = x
  let assert Nil = y
}


----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(x, y) {
  if (!x) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  if (x) {
    throw makeError(
      "let_assert",
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  if (y) {
    throw makeError(
      "let_assert",
      "my/mod",
      5,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: y }
    )
  }
  return y;
}
