compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__case.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 114
expression: "\nfn go(a) {\n  case a {\n    True -> 1\n    False -> 0\n  }\n}\n"
---
----- SOURCE CODE

fn go(a) {
  case a {
    True -> 1
    False -> 0
  }
}


----- COMPILED JAVASCRIPT
function go(a) {
  if (a) {
    return 1;
  } else {
    return 0;
  }
}
