compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__constants.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 18
expression: "\nconst a = True\nconst b = False\nconst c = Nil\n"
---
----- SOURCE CODE

const a = True
const b = False
const c = Nil


----- COMPILED JAVASCRIPT
const a = true;

const b = false;

const c = undefined;
