compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__equality.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 95
expression: "\nfn go(a, b) {\n  a == True\n  a != True\n  a == False\n  a != False\n  a == a\n  a != a\n  b == Nil\n  b != Nil\n  b == b\n}\n"
---
----- SOURCE CODE

fn go(a, b) {
  a == True
  a != True
  a == False
  a != False
  a == a
  a != a
  b == Nil
  b != Nil
  b == b
}


----- COMPILED JAVASCRIPT
function go(a, b) {
  a === true;
  a !== true;
  a === false;
  a !== false;
  a === a;
  a !== a;
  b === undefined;
  b !== undefined;
  return b === b;
}
