compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__expressions.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 5
expression: "\nfn go() {\n    True\n    False\n    Nil\n}\n"
---
----- SOURCE CODE

fn go() {
    True
    False
    Nil
}


----- COMPILED JAVASCRIPT
function go() {
  true;
  false;
  return undefined;
}
