compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__negate_panic.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n  !panic\n}"
---
import { makeError } from "../rakun.mjs";

export function negate(x) {
  return !(() => {
    throw makeError(
      "panic",
      "my/mod",
      2,
      "negate",
      "`panic` expression evaluated.",
      {}
    )
  })();
}
