compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__shadowed_bools_and_nil.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "\npub record True { True False Nil }\nfn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
---
import { CustomType as $CustomType, makeError } from "../rakun.mjs";

export class True extends $CustomType {}

export class False extends $CustomType {}

export class Nil extends $CustomType {}

function go(x, y) {
  if (!(x instanceof True)) {
    throw makeError(
      "let_assert",
      "my/mod",
      4,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  if (!(x instanceof False)) {
    throw makeError(
      "let_assert",
      "my/mod",
      5,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  if (!(y instanceof Nil)) {
    throw makeError(
      "let_assert",
      "my/mod",
      6,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: y }
    )
  }
  return y;
}
